Closed
Bug 793394
Opened 13 years ago
Closed 13 years ago
Thunderbird build is broken after Bug 777292 (error: cannot convert from 'int' to 'nsresult')
Categories
(MailNews Core :: Import, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 18.0
People
(Reporter: ssitter, Unassigned)
References
Details
Attachments
(1 file)
|
2.39 KB,
patch
|
neil
:
review+
|
Details | Diff | Splinter Review |
e:/builds/moz2_slave/tb-c-cen-w32/build/mailnews/import/oexpress/WabObject.cpp(331) : error C2440: '=' : cannot convert from 'int' to 'nsresult'
Conversion to enumeration type requires an explicit cast (static_cast, C-style cast or function-style cast)
Attachment #663689 -
Flags: review?
| Reporter | ||
Updated•13 years ago
|
Attachment #663689 -
Flags: review? → review?(mbanner)
| Reporter | ||
Updated•13 years ago
|
Assignee: nobody → ssitter
Status: NEW → ASSIGNED
| Reporter | ||
Updated•13 years ago
|
Blocks: nsresult-enum
Comment 1•13 years ago
|
||
Comment on attachment 663689 [details] [diff] [review]
possible bustage fix
>+ if (HR_FAILED(hr)) {
>+ return false;
>+ }
>
> if (!GetTmpFile(tmp_file))
> return false;
Nit: other cases either a) don't bother with the {}s or b) include a MAPI_TRACEn macro.
Attachment #663689 -
Flags: review?(mbanner) → review+
| Reporter | ||
Comment 2•13 years ago
|
||
Pushed to https://hg.mozilla.org/comm-central/rev/2aee2804b79b and Windows builds are OK again.
Seems that OS X builds are broken by a similar error in mailnews/compose/src/nsMsgAttachmentHandler.cpp. I don't have access to OS X build system therefore I can't provide a patch.
Should a close this bug as fixed and you'll use a different one for the OS X problem? Or do you want to keep this bug open to fix the problem here?
| Reporter | ||
Comment 3•13 years ago
|
||
Reassigning back to default to ensure that someone else takes over for the required Mac OS X changes.
Assignee: ssitter → nobody
Status: ASSIGNED → NEW
Comment 4•13 years ago
|
||
I just landed a change with rs from Neil over irc, and a part rs as a bustage-fix, this should make Mac green now:
https://hg.mozilla.org/comm-central/rev/987cb8d53150
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
Target Milestone: --- → Thunderbird 18.0
You need to log in
before you can comment on or make changes to this bug.
Description
•