Bug 793394 - Thunderbird build is broken after Bug 777292 (error: cannot convert from 'int' to 'nsresult') r=neil